test/5-errors/errorlinenumber2.fail.gold.txt
errorlinenumber2.fail.6502:9: error: Indirect mode not allowed for this instruction.

ldx (&70),y
    ^
